2008-05-22  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/misc/httpserver/file.py:
	Remove ratecontrol import - it's not used and shouldn't be there.

2008-05-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/client.py:
	Add an option to dump the current configuration to the user interface

	* flumotion/admin/gtk/client.py
	(AdminClientWindow._export_configuration):
	Set the default export filename to configuration.xml and
	always append .xml if it's missing.

	* flumotion/test/test_parts.py (TestComponentsView.testUpdate):
	Add 'type' key to the test components, so the tests can pass
	after the latest sorting changes

	* flumotion/admin/gtk/client.py
	(AdminClientWindow._import_configuration):
	Add two file filters when importing configuration, one for *.xml
	and one for everything.

	* flumotion/admin/gtk/parts.py (ComponentsView.update): Sort the
	component list by component type, similar to the xml file.

	* flumotion/test/test_greeter.py (WizardTest.testGreeter): Remove test
	which checks auth_method_combo, which now is gone

	* flumotion/admin/gtk/connections.py (Authenticate.__init__):
	* data/glade/authenticate.glade:
	Remove the label and combobox for authentication method, since we
	only support one kind of method right now.

	* data/glade/production-wizard.glade: Change on demand radiobutton
	label to "Stream files on demand"

	* flumotion/admin/gtk/parts.py (ComponentsView._add_columns):
	Rename the mood column to status

	* flumotion/ui/wizard.py (SectionWizard._updateButtons): Use finish
	instead of apply when completing the wizard

	* flumotion/admin/gtk/client.py
	(AdminClientWindow._import_configuration)
	(AdminClientWindow._export_configuration): Import and Export dialogs
	should use a verb instead of just OK to confirm the dialog.

	* flumotion/wizard/consumptionsteps.py (HTTPConsumptionStep.section):
	Rename the streaming page from HTTP to HTTP Streaming.

	* data/image/16x16/Makefile.am:
	* data/image/16x16/pause.png: