@@ -1,3 +1,8 @@
+2008-05-23  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/main.py: Return a proper error code
+	when quitting, 0 for success non-zero for failure.
+
 2008-05-22  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/component/misc/httpserver/file.py:
